--- a/config/targets/aborgardt.bwapp.json
+++ b/config/targets/aborgardt.bwapp.json
@@ -1,35 +1,46 @@
 {
   "runconfig": {
-    "target": "https://aborgardt.com/master/bWAPP/xss_get.php",
-    "params": {
-      "valid": {
-        "get": {
-          "urlencode": true,
-          "firstname": "aborgardt",
-          "lastname": "borgardt"
-        },
-        "post": {
-          "urlencode": false,
-          "login": "bee",
-          "password": "bug",
-          "security_level": 0
-        },
-        "cookies": {
+    "valid": {
+      "precondition": {
+        "target": "https://aborgardt.com/master/bWAPP/login.php",
+        "params": {
+          "post": {
+            "login": "bee",
+            "password": "bug",
+            "security_level": 0,
+            "form": "submit"
+          }
         }
       },
-      "attack": {
-        "get": {
-          "urlencode": true,
-          "firstname": "PAYLOAD",
-          "lastname": "borgardt"
-        },
-        "post": {
-          "urlencode": false,
-          "login": "bee",
-          "password": "bug",
-          "security_level": 0
-        },
-        "cookies": {
+      "action": {
+        "target": "https://aborgardt.com/master/bWAPP/xss_get.php",
+        "params": {
+          "get": {
+            "firstname": "aborgardt",
+            "lastname": "borgardt"
+          }
+        }
+      }
+    },
+    "attack": {
+      "precondition": {
+        "target": "https://aborgardt.com/master/bWAPP/login.php",
+        "params": {
+          "post": {
+            "login": "bee",
+            "password": "bug",
+            "security_level": 0,
+            "form": "submit"
+          }
+        }
+      },
+      "action": {
+        "target": "https://aborgardt.com/master/bWAPP/xss_get.php",
+        "params": {
+          "get": {
+            "firstname": "PAYLOAD",
+            "lastname": "borgardt"
+          }
         }
       }
     }
