Umstrukturierung der Element und Grammatikkonfigurationen
git-svn-id: https://svn.aborgardt.com/private/Projekte/SmartGrazer/trunk@361 ac24ebb7-9227-423d-8e2a-3b3772374dbc

--- a/config/targets/aborgardt.bwapp.json
+++ b/config/targets/aborgardt.bwapp.json
@@ -16,7 +16,7 @@
         "target": "https://aborgardt.com/master/bWAPP/xss_get.php",
         "params": {
           "get": {
-            "firstname": "aborgardt",
+            "firstname": "alexander",
             "lastname": "borgardt"
           }
         }
