- PayloadGenerator Smarty feriggestellt -- Payloads werden erstellt und anhand ihrer Erfolgschancen gezogen. -- Aus den Generierten Payloads wird das mit den größten Lebenspunkten gewählt
git-svn-id: https://svn.aborgardt.com/private/Projekte/SmartGrazer/trunk@366 ac24ebb7-9227-423d-8e2a-3b3772374dbc

--- a/config/config.json
+++ b/config/config.json
@@ -58,7 +58,11 @@
       "smarty": {
         "attacks": "smarty/attacks.json",
         "elements": "smarty/elements.json",
-        "grammar": "smarty/grammars.json",
+        "grammars": "smarty/grammars.json",
+        "life": {
+          "default": 100,
+          "999" : "set default to 999 to get random life values"
+        },
         "urlencode": false
       },
       "mutty": {},
