--- a/config/config.json
+++ b/config/config.json
@@ -60,7 +60,7 @@
       },
       "dharma": {
         "script": "../../../dharma-github/trunk/dharma/dharma.py",
-        "grammar": "../../../dharma-github/trunk/dharma/grammars/smartgrazer.dg",
+        "grammar": "/config/smartgrazer.dg",
         "urlencode": false
       },
       "smarty": {
