--- a/config/config.json
+++ b/config/config.json
@@ -82,7 +82,9 @@
       "uppy": {
         "enabled": true
       },
-      "webber": {},
+      "webber": {
+        "cleanup" : false
+      },
       "sandy": {
         "response": {
           "savedir": "results/sandy/"
