- Debugging-Output entfernt - Maximalzahl der Angriffe implementiert - Requirements gesäubert - Konfiguration angepasst
git-svn-id: https://svn.aborgardt.com/private/Projekte/SmartGrazer/trunk@377 ac24ebb7-9227-423d-8e2a-3b3772374dbc

--- a/config/config.json
+++ b/config/config.json
@@ -73,7 +73,8 @@
         "script": "jsfuck3.py"
       },
       "webber": {
-        "cleanup": true
+        "cleanup": true,
+        "maxattempts" : 50
       },
       "sandy": {
         "response": {
