Wichtige Stellen kommentiert. Sphinx-Doc erstellt. (Hauptverzeichnis -> doc/make.bat html) Überflüssige Codestellen gesäubert.
git-svn-id: https://svn.aborgardt.com/private/Projekte/SmartGrazer/trunk@381 ac24ebb7-9227-423d-8e2a-3b3772374dbc

--- a/config/config.json
+++ b/config/config.json
@@ -73,33 +73,19 @@
         "script": "jsfuck3.py"
       },
       "webber": {
-        "cleanup": true,
+        "cleanup": false,
         "maxattempts" : 50
       },
       "sandy": {
         "response": {
           "savedir": "results/sandy/"
         },
-        "get": {
-          "urlencode": true,
-          "replace": "PAYLOAD"
-        },
-        "post": {
-          "urlencode": false,
-          "replace": "PAYLOAD"
-        },
-        "cookies": {
-          "urlencode": false,
-          "replace": "PAYLOAD"
-        },
-        "header": {
-          "urlencode": false,
-          "replace": "PAYLOAD"
+        "proxies": {},
+        "proxies_example": {
+          "http": "http://127.0.0.1"
         }
       },
-      "annelysa": {},
-      "clint": {},
-      "confy": {}
+      "annelysa": {}
     }
   }
 }
