- Changed MaxAttempts to Timelimit - Added SeleniumTesting for alert-Promts - Responses can clean files now - Changed SmartGrazer implementation to seach for x amount of working payloads or due time limit - Changed logging to be controllable - Added the used Webdrivers.
git-svn-id: https://svn.aborgardt.com/private/Projekte/SmartGrazer/trunk@394 ac24ebb7-9227-423d-8e2a-3b3772374dbc

--- a/config/config.json
+++ b/config/config.json
@@ -1,7 +1,7 @@
 {
   "smartgrazer": {
     "logging": {
-      "level": 0
+      "level": 10
     },
     "directories": {
       "runconfigs": "/../../config/targets/"
@@ -9,7 +9,7 @@
     "imps": {
       "smithy": {
         "generate": {
-          "amount": 3
+          "amount": 1000
         },
         "generator": "smarty",
         "elements": "smarty/elements.json",
@@ -74,7 +74,8 @@
       },
       "webber": {
         "cleanup": false,
-        "maxattempts" : 50
+        "# timelimit in minutes" : "amount will be multiplied with 60 to get minutes",
+        "timelimit" : 5
       },
       "sandy": {
         "response": {
