- Initializing Elements-Life with different values. - Added Spacy-imp to insert whitespaces into elements
git-svn-id: https://svn.aborgardt.com/private/Projekte/SmartGrazer/trunk@399 ac24ebb7-9227-423d-8e2a-3b3772374dbc

--- a/config/config.json
+++ b/config/config.json
@@ -9,13 +9,12 @@
     "imps": {
       "smithy": {
         "generate": {
-          "amount": 1000
+          "amount": 1
         },
         "generator": "smarty",
-        "elements": "smarty/elements.json",
-        "life": {
-          "default": 100,
-          "999": "set default >100 to get random life values"
+        "elements": {
+          "usages" : "smarty/elements.json",
+          "lifes" : "smarty/elements.life.json"
         }
       },
       "simpy": {
