git-svn-id: https://svn.aborgardt.com/private/Projekte/SmartGrazer/trunk@401 ac24ebb7-9227-423d-8e2a-3b3772374dbc

--- a/config/config.json
+++ b/config/config.json
@@ -64,6 +64,7 @@
       },
       "smarty": {
         "attacks": "smarty/attacks.json",
+        "outbreaks": "smarty/outbreaks.json",
         "grammars": "smarty/grammars.json",
         "urlencode": false
       },
