git-svn-id: https://svn.aborgardt.com/private/Projekte/SmartGrazer/trunk@402 ac24ebb7-9227-423d-8e2a-3b3772374dbc

--- a/config/config.json
+++ b/config/config.json
@@ -86,7 +86,10 @@
           "http": "http://127.0.0.1"
         }
       },
-      "annelysa": {}
+      "annelysa": {
+        "webdriver" : "Chrome",
+        "#webdriver_options" : ["Firefox","Chrome"]
+      }
     }
   }
 }
